# lumina-beat-regionalization

./: .gitignore  HANDOFF_CONTINUACAO_V11.md  HANDOFF_POS_FASE1_ROTA_A.md  LUMINA.md  README.md  RESULTADOS_REGIONALIZACAO_V11.md  ROADMAP.md  TECHNICAL.md  eval-ntv3.sh  eval-sagemaker.sh  pyproject.toml  requirements.txt  run.sh  scratch.ipynb
artifacts/: adapter_fusion_regionalization_blueprint.txt  clinvar_regional_fusion_status.md  clinvar_regional_m6_m4_parallel_status.md
configs/: README.md  _base.yaml
data/: download.sh
docs/: README.md  confidentialidade-e-uso-aws.md  local-dev.md  research-program.md  roadmap.md
lumina_beat_v11/: __init__.py  checkpoint.py  constants.py  local_attn.py  loss_ema.py  model.py  tokenizer.py
notebooks/: README.md  data.ipynb
scripts/: README.md  abraom_frequency_adapter_job.py  analyze_adapter_fusion_deep_errors.py  analyze_m5_v2_calibrated.py  analyze_m7_scrambled_control.py  analyze_ntv3_effective_receptive_field.py  analyze_ntv3_gated_hybrid_gates.py  assemble_regional_baseline_csv.py  build_brazilian_plp_sentinel_panel.py  build_public_abraom_validation_package.py  build_regional_clinvar_eval_slices.py  calibrate_clinvar_regional_scores.py  calibrate_m5_v2_regional_scores.py  calibrate_m5_v3_safety.py  clinvar_finetune_job.py  clinvar_fusion_job.py  clinvar_m0_job.py  clinvar_regional_eval_job.py  compare_abraom_frequency_adapter_runs.py  compare_alphagenome_ntv3_track.py  compare_freq_adapters.py  compare_fusion_falsification.py  compile_abraom_researcher_transfer_report.py  compile_abraom_study_html_report.py  compile_adapter_fusion_blueprint_completion_report.py  compile_alphagenome_ntv3_comparison.py  dispatch_beat_v1_b200.sh  dispatch_clinvar_finetune_b200.sh  dispatch_ntv3_beat_v10_assay_gated_bio_pyramid.sh  dispatch_ntv3_beat_v10_assay_rescue_hybrid.sh  dispatch_ntv3_beat_v10_bio_aux_pyramid.sh  dispatch_ntv3_beat_v10_biocov_residual.sh  dispatch_ntv3_beat_v10_bioprogram_stack.sh  dispatch_ntv3_beat_v10_context_pyramid.sh  dispatch_ntv3_beat_v10_profile_count_bioaux.sh  dispatch_ntv3_beat_v10_profile_count_rc_gated_residual.sh  (+53 more)
(+587 files in other folders)
