[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumina-ssm"
version = "0.1.0"
description = "Reproducible research core for the Lumina bidirectional Mamba DNA foundation model."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Lumina" }]
dependencies = [
    "setuptools>=68",
    "torch",
    "numpy",
    "pyarrow>=14.0",
    "pyfaidx",
    "pyBigWig",
    "PyYAML>=6.0",
    "causal-conv1d>=1.2.0; sys_platform == 'linux'",
    "mamba-ssm; sys_platform == 'linux'",
    "mamba-ssm-macos; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "transformers>=5.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "pyrefly"]
notebook = ["jupyterlab", "ipykernel"]
tracking = ["wandb"]
sagemaker = ["boto3", "botocore[crt]", "sagemaker>=3.0", "python-dotenv"]
eval = ["pandas>=2.0", "pyarrow>=14.0"]

[tool.uv]
no-build-isolation-package = ["mamba-ssm"]

[tool.uv.extra-build-dependencies]
mamba-ssm = ["setuptools>=68"]

[tool.uv.sources]
torch = { index = "pytorch-cu126", marker = "sys_platform == 'linux'" }
mamba-ssm = { git = "https://github.com/state-spaces/mamba.git", marker = "sys_platform == 'linux'" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
  "B008", # function-call in defaults (common in CLIs/configs)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyrefly]
search_path = [".", "releases/beat-v7"]
project_excludes = ["notebooks"]
ignore-missing-imports = ["pyBigWig", "wandb", "pandas", "pyarrow"]
